@@ -15,10 +15,12 @@ Version 2.1
 
   * Emacs Lisp (PR#431)
   * Arduino (PR#442)
+  * Modula-2 with multi-dialect support (#1090)
 
 - Added styles:
 
   * Lovelace (PR#456)
+  * Algol and Algol-nu (#1090)
 
 
 Version 2.0.3
